@@ -69,7 +69,7 @@ public class ApmServerClient {
     private static final Logger logger = LoggerFactory.getLogger(ApmServerClient.class);
     private static final String USER_AGENT = "elasticapm-java/" + VersionUtils.getAgentVersion();
     private static final Version VERSION_6_7 = Version.of("6.7.0");
-    private static final Version VERSION_7_8 = Version.of("7.8.0");
+    private static final Version VERSION_7_9 = Version.of("7.9.0");
     private final ReporterConfiguration reporterConfiguration;
     private volatile List<URL> serverUrls;
     private volatile Future<Version> apmServerVersion;
@@ -304,7 +304,7 @@ public class ApmServerClient {
     }
 
     public boolean supportsLogsEndpoint() {
-        return isAtLeast(VERSION_7_8);
+        return isAtLeast(VERSION_7_9);
     }
 
     public boolean isAtLeast(Version apmServerVersion) {
